# UnibgKukaYoubot

./: COMMIT  Driver.py  GAETANOCHIATTONE  README.md  RoverInformation.py  ciao  cpp  cpp_Loris  cpp_jeorjeo  cpp_vergine  da mettere in cpp  driveprova2711  driver.py  driverCompleto.py  driverUltimoFunzionante  ggg  hpp  hpp_Loris  laser  loris  mondo.txt  move.sh  prova move  prova per sistemare  prova_cpp_giorgio  prova_cpp_rotazione_giorgio  youbot
Webotsgiorgio/: Youbot_starter.sh  pilota.sh  reset_env.sh  setup.sh  webots.sh
Webotsgiorgio/install/: local_setup.sh  setup.sh
Webotsgiorgio/install/util/share/util/: package.sh  (+4 more)
Webotsgiorgio/log/: latest_build
Webotsgiorgio/src/aurora_msgs/: CMakeLists.txt  package.xml
Webotsgiorgio/src/cpp_pubsub/: CMakeLists.txt
Webotsgiorgio/src/rover_msgs/: CMakeLists.txt  README.md
Webotsgiorgio/src/rover_msgs/msg/: EmergencyStop.idl  RoverInfo.idl
Webotsgiorgio/src/util/: setup.py
Webotsgiorgio/src/webots_hospital_youbot/: README.md  setup.cfg  setup.py
Webotsgiorgio/src/webots_hospital_youbot/launch/: README.md
Webotsgiorgio/src/webots_hospital_youbot/resource/: README.md
Webotsgiorgio/src/webots_hospital_youbot/webots_hospital_youbot/: README.md  driver.py  teleop_keyboard.py
Webotsgiorgio/src/webots_hospital_youbot/worlds/: .kuka.wbproj  .webots_hospital_tiago.wbproj  .webots_hospital_youbot.wbproj  README.md  webots_hospital_youbot.wbt
Webotsgiorgio/src/webots_tutorial/: setup.cfg  setup.py
old/: RoverInformation.py  Youbot.proto  loris  move.sh  webots_hospital_youbot.wbt  world.py  youbot_logic.py
(+138 files in other folders)
